# Test

./: CMakeLists.txt  Dockerf  Dockerfile  README.md  debug_stream.js  debug_stream_verified.js  delete.py  main.cpp  main.py  muted_users. json  next.config.ts  package-lock.json  package.json  requirements.txt  reset_git.bat  roles.h  test-api.js  upload_to_github.bat  user_data.json  utils.py  vercel.json  verify_fallback.js  verify_fix.js  warning_handler.py  warnings.py
api/: transcript.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/stats/: route.ts
src/app/api/translate/: route.ts
src/app/api/youtube/: route.ts
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/keep-alive/: route.ts
src/app/login/: page.tsx
src/app/playground/: page.tsx
src/app/test/: page.tsx
src/components/: ChangelogModal.tsx  Navbar.tsx
src/data/: changelog.json
src/lib/: cache.ts  stats.ts
src/lib/model/: base.ts  define.ts  index.ts
src/lib/model/ddg/: index.ts
src/lib/model/pollination/: index.ts
src/lib/utils/: config.ts  index.ts  log.ts
src/scripts/: transcript.py
